<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">
  <data>

  </data>
  <LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".exerciseActivity.ExerciseActivity">

    <com.google.android.material.appbar.AppBarLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:theme="@style/AppTheme.AppBarOverlay">

      <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/appbar_padding"
        android:gravity="center"
        android:minHeight="?actionBarSize"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"/>

      <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:background="?attr/colorPrimary"/>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
      android:id="@+id/view_pager"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="bottom"
      android:background="@color/colorPrimary"
      android:orientation="horizontal">
      <ImageView
        android:background="?attr/selectableItemBackground"
        android:id="@+id/timer_reset"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:contentDescription="@string/reset"
        app:srcCompat="@drawable/ic_settings_backup_restore_white_24dp"/>
      <TextView
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:id="@+id/timer_display"
        android:layout_width="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_weight="1"
        android:text="@string/timer_start_value"
        android:textSize="30sp"/>
      <ImageView
        android:background="?attr/selectableItemBackground"
        android:id="@+id/timer_start_pause"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:contentDescription="@string/play"
        app:srcCompat="@drawable/ic_play_arrow_white_24dp"/>
    </LinearLayout>
  </LinearLayout>
</layout>