<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
  <data>

  </data>
  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal">
    <NumberPicker
      android:id="@+id/minutesNumberPicker"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"/>
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/colon"
      android:textSize="30sp"/>
    <NumberPicker
      android:id="@+id/secondsNumberPicker"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"/>
  </LinearLayout>
</layout>